--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:padding="16dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.FlightFragment">
 
 
     <!-- Bienvenida -->
