--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="edu.pmdm.movaapp.ui.home.HomeFragment"
+        android:name="edu.pmdm.movaapp.ui.home.FlightFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
