--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -54,6 +54,7 @@
                 app:tint="#FFB300"/>
 
             <TextView
+                android:id="@+id/txtReturn"
                 android:text="Return Flight"
                 android:textSize="22sp"
                 android:textStyle="bold"
