--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:padding="16dp"
     tools:context=".ui.home.FlightFragment">
 
@@ -117,6 +116,33 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <RadioGroup
+        android:id="@+id/rgTripType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/fromToCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dateLayout">
+
+        <RadioButton
+            android:id="@+id/rbOneWay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Solo ida"
+            android:checked="true" />
+
+        <RadioButton
+            android:id="@+id/rbRoundTrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ida y vuelta"
+            android:layout_marginStart="16dp" />
+    </RadioGroup>
+
+
     <!-- Fechas -->
     <LinearLayout
         android:id="@+id/dateLayout"
@@ -126,7 +152,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fromToCard">
+        app:layout_constraintTop_toBottomOf="@id/rgTripType">
 
         <EditText
             android:id="@+id/etDeparture"
