--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ui.home.FlightFragment">
+    tools:context=".ui.flights.FlightFragment">
 
 
     <!-- Bienvenida -->
@@ -131,14 +131,14 @@
             android:id="@+id/rbOneWay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Solo ida"
+            android:text="Outbound"
             android:checked="true" />
 
         <RadioButton
             android:id="@+id/rbRoundTrip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ida y vuelta"
+            android:text="Return"
             android:layout_marginStart="16dp" />
     </RadioGroup>
 
