--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ui.gallery.HotelFragment">
+    tools:context=".ui.hotels.HotelFragment">
 
     <!-- Bienvenida -->
     <ImageView
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_bg"
-            android:hint="Código IATA (ej. MAD)"
+            android:hint="City Name"
             android:inputType="text"
             android:padding="12dp" />
 
