--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,10 +24,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        android:hint="Email"
         android:ems="10"
-        android:inputType="text" />
+        android:hint="Email"
+        android:inputType="text"
+        android:maxLength="40" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -35,9 +37,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="Password"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:maxLength="16" />
 
     <LinearLayout
         android:layout_width="wrap_content"
