--- a/app/src/main/res/layout/fragment_hotel_items.xml
+++ b/app/src/main/res/layout/fragment_hotel_items.xml
@@ -17,7 +17,7 @@
             android:id="@+id/ivLoading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/cargandovuelos"
+            android:src="@drawable/buscandohoteles"
             android:scaleType="centerInside" />
 
     </FrameLayout>
